<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/blue_dark"
        android:textSize="16sp"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/mProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dataLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <LinearLayout
            android:id="@+id/linearContainerMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline">

            <TextView
                android:id="@+id/textLocationStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_bold"
                android:includeFontPadding="false"
                android:text="Cedro"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageWeatherStatus"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/weather" />

            <TextView
                android:id="@+id/textTemperatureStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:includeFontPadding="false"
                android:text="35.0°"
                android:textColor="?attr/colorPrimary"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/textDescriptionStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:text="Ceú Limpo"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textMainStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:includeFontPadding="false"
                android:text="Chuva"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/firstLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearContainerMain">

            <com.google.android.material.card.MaterialCardView
                style="@style/CardViewMain"
                app:cardCornerRadius="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageFeelsLikeTemp"
                        style="@style/ImageViewMain"
                        android:contentDescription="@string/sensation"
                        android:src="@drawable/ic_temperature"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textSupportFeelsLikeTemp"
                        style="@style/TextViewSupportMain"
                        android:text="@string/sensation"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/imageFeelsLikeTemp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textFeelsLikeTemp"
                        style="@style/TextViewMain"
                        android:text="35.2°"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/textSupportFeelsLikeTemp"
                        app:layout_constraintStart_toStartOf="@id/textSupportFeelsLikeTemp"
                        app:layout_constraintTop_toBottomOf="@id/textSupportFeelsLikeTemp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/CardViewMain"
                app:cardCornerRadius="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageHumidity"
                        style="@style/ImageViewMain"
                        android:contentDescription="@string/humidity"
                        android:src="@drawable/ic_humidity"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textSupportHumidity"
                        style="@style/TextViewSupportMain"
                        android:text="@string/humidity"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/imageHumidity"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textHumidity"
                        style="@style/TextViewMain"
                        android:text="95%"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/textSupportHumidity"
                        app:layout_constraintStart_toStartOf="@id/textSupportHumidity"
                        app:layout_constraintTop_toBottomOf="@id/textSupportHumidity" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearContainerBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstLayout">

            <com.google.android.material.card.MaterialCardView
                style="@style/CardViewMain"
                app:cardCornerRadius="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageWind"
                        style="@style/ImageViewMain"
                        android:contentDescription="@string/wind"
                        android:src="@drawable/ic_wind"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textSupportWind"
                        style="@style/TextViewSupportMain"
                        android:text="@string/wind"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/imageWind"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textWind"
                        style="@style/TextViewMain"
                        android:text="0 m/s"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/textSupportWind"
                        app:layout_constraintStart_toStartOf="@id/textSupportWind"
                        app:layout_constraintTop_toBottomOf="@id/textSupportWind" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/CardViewMain"
                app:cardCornerRadius="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imagePressure"
                        style="@style/ImageViewMain"
                        android:contentDescription="@string/pressure"
                        android:src="@drawable/ic_pressure"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textSupportPressure"
                        style="@style/TextViewSupportMain"
                        android:text="@string/pressure"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/imagePressure"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textPressure"
                        style="@style/TextViewMain"
                        android:text="1020 hPa"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/textSupportPressure"
                        app:layout_constraintStart_toStartOf="@id/textSupportPressure"
                        app:layout_constraintTop_toBottomOf="@id/textSupportPressure" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>